--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "หวยจ่าย เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
+  "name": "qw100-syntax",
   "theme": "syntax",
   "version": "0.2.1",
   "description": "หวยจ่าย✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
